--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,20 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+
+.sliderContainer {
+	width: 100%;
+	white-space: nowrap;
+	transition: all .5s ease-in-out;
+	transform: 'translate(0%)',
+}
+
+.slider {
+	display: inline-block;
+}
+
+.slider img {
+	width: 100%;
+	height: auto;
+}
